data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2039.wast
;; 10. **Reenter Block with Incorrect Stack State:**     - Define a loop block where `br_table` re-targets the block, and the instruction should ensure stack state is appropriate for reentry.     - *Testing for*: Correct stack unwinding and reentry management.     - *Constraint*: Backward branch and stack management.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (br_table 0 1 (local.get 0))
        )
        (i32.const 0)
        (br 0)
      )
    )
  )
  "type mismatch"
)